// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'renders fancy with button as is from import' 1`] = `
<div>
  <button>
    fancy1
  </button>
</div>
`;

exports[`'renders fancy with button as is' 1`] = `
<div>
  <button>
    pancy
  </button>
</div>
`;

exports[`'renders fancy with button as span or div' 1`] = `
<div>
  <span>
    hhhhh
  </span>
</div>
`;

exports[`'renders fancy with button as span or div' 2`] = `
<div>
  <div>
    ggggg
  </div>
</div>
`;

exports[`'renders fancy with button mock from file' 1`] = `
<div>
  <span>
    file mock
  </span>
</div>
`;
